# wmi_hwid

./: Cargo.toml
src/: main.rs
src/lib/: query_hwid.rs
src/structs/: wmi_structs.rs
