[package]
name = "get_hwid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.44.0"
winapi = { version = "0.3.9", features = ["winnt", "debugapi"] }
wmi = "0.12.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
machineid-rs = "1.2.2"
sysinfo = "0.28.2"